--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,6 @@
 plugins {
     id 'java'
+    id "com.diffplug.spotless" version "6.23.3"
 }
 
 group = 'dev.luanfernandes.admin.catalogo'
@@ -16,4 +17,20 @@ dependencies {
 
 test {
     useJUnitPlatform()
+}
+
+subprojects {
+    apply plugin: 'java'
+    apply plugin: "com.diffplug.spotless"
+
+    spotless {
+        java {
+            target 'src/**/*.java'
+            googleJavaFormat()
+            formatAnnotations()
+            removeUnusedImports()
+            importOrder()
+            palantirJavaFormat()
+        }
+    }
 }
