--- a/infrastructure/build.gradle
+++ b/infrastructure/build.gradle
@@ -1,9 +1,18 @@
 plugins {
     id 'java'
+    id  'application'
+    id 'org.springframework.boot' version '2.6.7'
+    id 'io.spring.dependency-management' version '1.0.11.RELEASE'
+
 }
 
 group = 'dev.luanfernandes.admin.catalogo.infrastructure'
 version = '1.0-SNAPSHOT'
+
+bootJar {
+    archiveFileName = 'application.jar'
+    destinationDirectory.set(rootProject.layout.buildDirectory.dir("libs"))
+}
 
 repositories {
     mavenCentral()
@@ -14,8 +23,12 @@ dependencies {
     implementation project(':domain')
     implementation project(':application')
 
-    testImplementation platform('org.junit:junit-bom:5.9.1')
-    testImplementation 'org.junit.jupiter:junit-jupiter'
+    implementation ('org.springframework.boot:spring-boot-starter-web'){
+        exclude module: 'spring-boot-starter-tomcat'
+    }
+    implementation 'org.springframework.boot:spring-boot-starter-undertow'
+
+    testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
 
 test {
