--- a/infrastructure/src/main/resources/application.yml
+++ b/infrastructure/src/main/resources/application.yml
@@ -8,3 +8,9 @@ server:
     threads:
       worker: 64 # Generally this should be reasonably high number, at least 10 per CPU core. https://undertow.io/undertow-docs/undertow-docs-2.0.0/index.html#blocking-handler
       io: 4 # One IO thread per CPU core. https://undertow.io/undertow-docs/undertow-docs-2.1.0/index.html#listeners-2
+
+spring:
+  datasource:
+    url: jdbc:mysql://${mysql.url}/${mysql.schema}?useSSL=true&serverTimezone=UTC&characterEncoding=utf8&useUnicode=true
+    username: ${mysql.username}
+    password: ${mysql.password}
