--- a/infrastructure/build.gradle
+++ b/infrastructure/build.gradle
@@ -31,8 +31,9 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-undertow'
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 
-
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
+
+    testRuntimeOnly 'com.h2database:h2'
 }
 
 test {
