--- a/infrastructure/src/main/resources/application.yml
+++ b/infrastructure/src/main/resources/application.yml
@@ -2,7 +2,7 @@ server:
   port: 8080
   compression:
     enabled: true # Whether response compression is enabled.
-    mime-types: text/html,text/xml,text/plain,text/css,text/javascript,application/javascript,application/json # Comma-separated list of MIME types that should be compressed. By default only text/html is compressed.
+    mime-types: text/html,text/xml,text/plain,text/css,text/javascript,application/javascript,application/json # Comma-separated list of MIME types that should be compressed. By default, only text/html is compressed.
     min-response-size: 1024 # Minimum "Content-Length" value that is required for compression to be performed. Default value is 2048 bytes.
   undertow:
     threads:
@@ -14,3 +14,22 @@ spring:
     url: jdbc:mysql://${mysql.url}/${mysql.schema}?useSSL=true&serverTimezone=UTC&characterEncoding=utf8&useUnicode=true
     username: ${mysql.username}
     password: ${mysql.password}
+    hikari:
+      auto-commit: false
+      connection-timeout: 250 # É uma configuração em milissegundos. O ideal é manter baixo para estourar timeout logo e nao prender as threads
+      max-lifetime: 600000 # Tempo máximo que uma conexão pode ficar aberta (10 minutos) - security
+      maximum-pool-size: 20 # Mantemos até no máximo 20 conexões com o banco de dados. O ideal é manter baixo mesmo, pois é algo custoso para o banco gerenciar: https://github.com/brettwooldridge/HikariCP/wiki/About-Pool-Sizing
+      minimum-idle: 10
+      pool-name: master
+  jpa:
+    open-in-view: false
+    show-sql: true
+    hibernate:
+      ddl-auto: none
+    properties:
+      hibernate:
+        dialect: org.hibernate.dialect.MySQL5InnoDBDialect
+        generate_statistics: false
+        connection.provider_disables_autocommit: true
+    # Para aumentar a performance ao máximo, desabilitamos o auto-commit e o open-in-view
+    # https://vladmihalcea.com/why-you-should-always-use-hibernate-connection-provider_disables_autocommit-for-resource-local-jpa-transactions
