--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,7 @@ version: '3.9'
 services:
   mysql:
     container_name: adm_videos_mysql
-    image: mysql:latest
+    image: mysql:8.1
     environment:
       MYSQL_ROOT_PASSWORD: 123456
       MYSQL_DATABASE: adm_videos
