--- a/infrastructure/build.gradle
+++ b/infrastructure/build.gradle
@@ -1,8 +1,18 @@
+buildscript {
+    repositories {
+        mavenCentral()
+    }
+    dependencies {
+        classpath 'org.flywaydb:flyway-mysql:10.4.1'
+    }
+}
+
 plugins {
     id 'java'
     id  'application'
     id 'org.springframework.boot' version '2.6.7'
     id 'io.spring.dependency-management' version '1.0.11.RELEASE'
+    id 'org.flywaydb.flyway' version '10.4.1'
 
 }
 
@@ -35,6 +45,13 @@ dependencies {
 
     testRuntimeOnly 'com.h2database:h2'
 }
+
+ flyway {
+
+     url = System.getenv('FLYWAY_DB')?:'jdbc:mysql://localhost:3306/adm_videos'
+     user = System.getenv('FLYWAY_USER')?:'root'
+     password = System.getenv('FLYWAY_PASSWORD')?:'123456'
+ }
 
 test {
     useJUnitPlatform()
