--- a/infrastructure/build.gradle
+++ b/infrastructure/build.gradle
@@ -1,8 +1,18 @@
+buildscript {
+    repositories {
+        mavenCentral()
+    }
+    dependencies {
+        classpath 'org.flywaydb:flyway-mysql:10.4.1'
+    }
+}
+
 plugins {
     id 'java'
     id  'application'
-    id 'org.springframework.boot' version '2.6.7'
-    id 'io.spring.dependency-management' version '1.0.11.RELEASE'
+    id 'org.springframework.boot' version '3.2.1'
+    id 'io.spring.dependency-management' version '1.1.4'
+    id 'org.flywaydb.flyway' version '10.4.1'
 
 }
 
@@ -23,7 +33,7 @@ dependencies {
     implementation project(':domain')
     implementation project(':application')
 
-    implementation 'mysql:mysql-connector-java'
+    implementation 'com.mysql:mysql-connector-j:8.2.0'
 
     implementation ('org.springframework.boot:spring-boot-starter-web'){
         exclude module: 'spring-boot-starter-tomcat'
@@ -35,6 +45,13 @@ dependencies {
 
     testRuntimeOnly 'com.h2database:h2'
 }
+
+ flyway {
+
+     url = System.getenv('FLYWAY_DB')?:'jdbc:mysql://localhost:3306/adm_videos'
+     user = System.getenv('FLYWAY_USER')?:'root'
+     password = System.getenv('FLYWAY_PASSWORD')?:'123456'
+ }
 
 test {
     useJUnitPlatform()
