--- a/infrastructure/build.gradle
+++ b/infrastructure/build.gradle
@@ -47,10 +47,10 @@ dependencies {
 }
 
  flyway {
-
      url = System.getenv('FLYWAY_DB')?:'jdbc:mysql://localhost:3306/adm_videos'
      user = System.getenv('FLYWAY_USER')?:'root'
      password = System.getenv('FLYWAY_PASSWORD')?:'123456'
+     flyway.cleanDisabled = false
  }
 
 test {
