Testes integrados do caso de uso de criação de categoria

--- a/infrastructure/build.gradle
+++ b/infrastructure/build.gradle
@@ -33,6 +33,7 @@ dependencies {
     implementation project(':domain')
     implementation project(':application')
 
+    implementation 'io.vavr:vavr:0.10.4'
     implementation 'com.mysql:mysql-connector-j:8.2.0'
 
     implementation ('org.springframework.boot:spring-boot-starter-web'){
