--- a/infrastructure/build.gradle
+++ b/infrastructure/build.gradle
@@ -36,6 +36,8 @@ dependencies {
     implementation 'io.vavr:vavr:0.10.4'
     implementation 'com.mysql:mysql-connector-j:8.2.0'
 
+    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.3.0'
+
     implementation ('org.springframework.boot:spring-boot-starter-web'){
         exclude module: 'spring-boot-starter-tomcat'
     }
